--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,22 +1,25 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="w-full h-full">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro Basics</title>
+		<link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
 	</head>
-	<body>
+	<body class="w-full h-full font-semibold">
+		<div class="w-full h-14 flex justify-center fixed top-0 backdrop-blur-lg border-b-zinc-100 border-b-[1px]">
+			<div class="container flex justify-between items-center">
+				<a href="/">Logo</a>
+				<div>
+					<a class="px-3 py-2 hover:bg-black/10 rounded-lg duration-300" href="/">Home</a>
+					<a class="px-3 py-2 hover:bg-black/10 rounded-lg duration-300" href="/category">Category</a>
+					<a class="px-3 py-2 hover:bg-black/10 rounded-lg duration-300" href="/info">Info</a>
+				</div>
+			</div>
+			
+		</div>
 		<slot />
 	</body>
 </html>
-
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
-</style>
