--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,22 @@
 ---
-import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
+import { getCollection } from 'astro:content';
 
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+const allBiologyPosts = await getCollection('biology');
 ---
 
 <Layout>
-	<Welcome />
+	<div class="w-fit h-full m-auto">
+		<div>pic</div>
+		<div>
+			<p>topic</p>
+			<div>cards</div>
+		</div>
+		<div>
+			<p>new articles</p>
+			<div>cards</div>
+		</div>
+		<a href="/articles/biology/02">02</a>
+
+	</div>
 </Layout>
