--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,7 +10,7 @@
 	</head>
 	<body class="w-full h-full font-semibold">
 		<div class="w-full h-14 flex justify-center fixed top-0 backdrop-blur-lg border-b-zinc-100 border-b-[1px]">
-			<div class="container flex justify-between items-center">
+			<div class="container max-w-[800px] flex justify-between items-center">
 				<a href="/">Logo</a>
 				<div>
 					<a class="px-3 py-2 hover:bg-black/10 rounded-lg duration-300" href="/">Home</a>
