--- a/src/pages/category.astro
+++ b/src/pages/category.astro
@@ -3,6 +3,7 @@ import Layout from '../layouts/Layout.astro';
 ---
 <Layout>
 	<div class="w-full h-full flex justify-center items-center">
-    category
+        <div class="container max-w-[800px]">category</div>
+    
 </div>
 </Layout>
