--- a/src/pages/info.astro
+++ b/src/pages/info.astro
@@ -4,10 +4,13 @@ import Layout from '../layouts/Layout.astro';
 
 <Layout>
 	<div class="w-full h-full flex justify-center items-center">
-		<div class="w-32 h-32 border-2">pic</div>
-		<div>
-			<div class="m-4 p-4 border-2">info 1</div>
-			<div class="m-4 p-4 border-2">info 2</div>
+		<div class="container max-w-[800px]">
+
+			<div class="w-32 h-32 border-2">pic</div>
+			<div>
+				<div class="m-4 p-4 border-2">info 1</div>
+				<div class="m-4 p-4 border-2">info 2</div>
+			</div>
 		</div>
 	</div>
 </Layout>
