--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,17 +5,16 @@
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>MW</title>
 		<link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
+		<link rel="stylesheet" as="style" href="/main.css" />
 	</head>
-	<body class="w-full h-full font-semibold">
-		<div class="w-full h-14 flex justify-center fixed top-0 backdrop-blur-lg border-b-zinc-100 border-b-[1px]">
-			<div class="container max-w-[800px] flex justify-between items-center">
-				<a href="/">Logo</a>
+	<body class="w-full h-full font-semibold text-zinc-700">
+		<div class="w-full h-14 flex justify-center fixed top-0 backdrop-blur-lg border-b-zinc-200 border-b-[1px]">
+			<div class="container max-w-[800px] flex items-center">
 				<div>
 					<a class="px-3 py-2 hover:bg-black/10 rounded-lg duration-300" href="/">Home</a>
-					<a class="px-3 py-2 hover:bg-black/10 rounded-lg duration-300" href="/category">Category</a>
-					<a class="px-3 py-2 hover:bg-black/10 rounded-lg duration-300" href="/info">Info</a>
+					<a class="px-3 py-2 hover:bg-black/10 rounded-lg duration-300" href="/blog">Blog</a>
 				</div>
 			</div>
 			
