--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,23 +8,19 @@ import Layout from '../layouts/Layout.astro';
 			<p>반갑습니다. 백민우입니다.</p>
 			<p class="mt-6">생명과학과 컴퓨터과학을 좋아합니다.</p>
 			<p>공부한 내용 등을 <a href="/blog" class="underline hover:text-green-500 duration-200">블로그</a>에 작성하고 있습니다.</p>
-			<div class="mt-6">
-				
+			<!-- <div class="mt-6">
 				<p>프로젝트</p>
 				<div class="flex">
 					<div class="flex justify-start items-center mr-2">
 						<img src="/snu_ui_download.png" class="w-9 h-9"/>
 					</div>
 					<div>
-						<p>서울대학교 생명과학부</p>
-						<p class="text-xs text-zinc-400">2024.03 ~</p>
+						<p>SNU E&I X SNAAC Ideathon The Beginning</p>
+						<p class="text-xs text-zinc-400">2024.11.29 ~ 2024.11.30</p>
 					</div>
-					
 				</div>
-				
-			</div>
+			</div> -->
 			<div class="mt-6">
-				
 				<p>학력</p>
 				<div class="flex">
 					<div class="flex justify-start items-center mr-2">
@@ -34,9 +30,7 @@ import Layout from '../layouts/Layout.astro';
 						<p>서울대학교 생명과학부</p>
 						<p class="text-xs text-zinc-400">2024.03 ~</p>
 					</div>
-					
 				</div>
-				
 			</div>
 		</div>
 	</div>
