--- a/public/main.css
+++ b/public/main.css
@@ -2,3 +2,18 @@
   background: #bfdbfe;
   color: black;
 }
+
+::-webkit-scrollbar {
+  width: 9px;
+  padding-right: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgb(177, 177, 177);
+  border-radius: 0.75rem;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgb(131, 131, 131);
+  border-radius: 0.75rem;
+}
