--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,6 +32,14 @@ import Layout from '../layouts/Layout.astro';
 					</div>
 				</div>
 			</div>
+			<div class="mt-6">
+				<p>🔗</p>
+				<div class="flex space-x-3">
+					<a href="https://github.com/baekmw"><i class="fa-brands fa-github" style="font-size: 2rem; color: #808080"></i></a>
+					<a href="https://instagram.com/baekmw"><i class="fa-brands fa-instagram" style="font-size: 2rem; color: #808080"></i></a>
+					<a href="https://linkedin.com/baekmw"><i class="fa-brands fa-linkedin" style="font-size: 2rem; color: #808080"></i></a>
+				</div>
+			</div>
 		</div>
 	</div>
 </Layout>
