--- a/src/layouts/markdown.css
+++ b/src/layouts/markdown.css
@@ -78,18 +78,16 @@
   margin-bottom: 0.5rem;
 }
 
-/* 인용구 스타일 */
 .markdown blockquote {
-  border-left: 4px solid #007aff;
+  border-left: 5px solid #007aff;
   padding-left: 1rem;
   margin: 1rem 0;
   color: #555;
   background: #f8f8f8;
   padding: 1rem;
-  border-radius: 4px;
+  border-radius: 5px;
 }
 
-/* 테이블 스타일 */
 .markdown table {
   width: 100%;
   border-collapse: collapse;
@@ -108,23 +106,14 @@
 }
 
 .markdown mark {
-  background-color: #fffb8f;
-  padding: 0.1rem 0.3rem;
-  border-radius: 3px;
-}
-
-.markdown .katex {
-  font-size: 1.2em;
-  text-align: center;
-  display: block;
-  margin: 0.5rem auto;
-}
-
-.markdown blockquote {
-  border-left: 4px solid #007aff;
-  padding-left: 1rem;
-  background: #f8f8f8;
-  padding: 1rem;
+  background-color: #ffdd009c;
+  padding: 0rem 0.3rem;
+  border-radius: 7px;
+  /* background-image: linear-gradient(
+    360deg,
+    rgba(255, 255, 255, 0) 40%,
+    #adccffa6 40%
+  ) !important; */
 }
 
 .markdown input[type="checkbox"] {
