--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -2,14 +2,14 @@
 import Layout from '../layouts/Layout.astro';
 import { getCollection } from 'astro:content';
 
-const allBiologyPosts = await getCollection('content');
+const allPosts = await getCollection('content');
 ---
 <Layout>
 	<div class="w-full h-full pt-[10rem] flex justify-center bg-zinc-100">
         <div class="container max-w-[800px]"><ul>
-                {allBiologyPosts.map(post => (
+                {allPosts.map(post => (
                         <li>
-                        <a href={`/${post.data.slug}`} class="hover:text-green-500 duration-200">{post.id}</a>
+                        <a href={`/${post.data.slug}`} class="hover:text-green-500 duration-200">{post.data.title}</a>
                 </li>
                 ))}
     </ul></div>
