--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,7 +13,7 @@
 
 	</head>
 	<body class="w-full h-full font-semibold text-zinc-700">
-		<div class="w-full h-14 flex justify-center fixed top-0 backdrop-blur-lg border-b-zinc-200 border-b-[1px]">
+		<div class="z-50 w-full h-14 flex justify-center fixed top-0 backdrop-blur-lg border-b-zinc-200 border-b-[1px]">
 			<div class="container max-w-[800px] flex items-center">
 				<div>
 					<a class="px-3 py-2 hover:bg-black/10 rounded-lg duration-300" href="/">Home</a>
