--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -4,6 +4,7 @@ import { getCollection, getEntry, render } from 'astro:content';
 import Layout from '../layouts/Layout.astro';
 import "../layouts/markdown.css";
 import Markdown from "../layouts/Markdown.astro";
+import { MoveLeft } from "lucide-react";
 
 const posts = await getCollection('content');
 
@@ -11,7 +12,7 @@ export const getStaticPaths = (async () => {
 const posts = await getCollection('content');
 
   return posts.map((post) => {
-    return {params: { slug: post.data.slug }}
+    return {params: { slug: post.data.slug}};
   });
 }) satisfies GetStaticPaths;
 
@@ -28,8 +29,8 @@ if (!post) {
 <Layout>
   <div class="w-full h-fit flex justify-center items-center bg-zinc-100">
     <div class="container max-w-[800px] py-[8rem] space-y-10">
-
-      <p class="text-3xl font-extrabold">{post.data.title}</p>
+      <a href={"/"+post.data.slug?.split("/")[0]}  class="flex space-x-1 items-center hover:text-green-500 duration-200"><MoveLeft /><p class="underline">{post.data.slug?.split("/")[0]}</p></a>
+      <p class="text-3xl font-extrabold py-2">{post.data.sticker ? String.fromCodePoint(parseInt(post.data.sticker.split("//")[1].split("-")[0], 16)) : ''}{post.data.title}</p>
       <p class="font-semibold">{post.data.pubDate} 에 작성되었습니다.</p>
       <article class="markdown">
         <Markdown content={post.body}></Markdown>
